# spotify_remote

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml
scripts/: check_display.py  convert_splash.py  run_loop.sh
src/spotify_remote/: buttons.py  config.py  display.py  main.py  spotify_client.py  ui.py
src/spotify_remote/drivers/: epd2in7.py
